--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="assets/styles/style.css">
     <script href="assets/scripts/script.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+    <link href="assets/images/favicon.ico" rel="icon">
     <title>Roxanne Proulx</title>
 </head>
 <body>
@@ -39,16 +42,17 @@
                 <img src="assets/images/pfp.jpg" alt="roxanne" class="pfp">
                <!-- PF pic -->
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 introtext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid obcaecati dolores vel quas libero tenetur nulla laudantium fugiat dolor? Iure voluptates inventore commodi, hic asperiores molestias est optio recusandae beatae.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias dicta odit optio reprehenderit modi officia possimus omnis. Error voluptas veniam vitae modi tempora, et natus non, reprehenderit accusantium dicta dolorem.</p>
+
             </div>
     </div>
-
+    <br><br><br>
     <div class="container Iam">
         <div class="row">
-            <div class="col-md-12">
-                <!-- I am -->
-            </div>
+            <div class="col-md-12 dynamic">
+                <p>I am <span class="typed-text"></span></p>
         </div>
     </div>
 
