--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/style.css">
-    <script href="assets/scripts/script.js"></script>
+    <script src="assets/scripts/script.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
@@ -25,13 +25,13 @@
                 <!-- leave empty -->
             </div>
             <div class="col-md-2 float-end">
-                <a id="navlink" href="hobbies.html">My<br>Hobbies</a>
+                <a id="navlink" href="#anchor-hobbies">My<br>Hobbies</a>
             </div>
             <div class="col-md-2 float-end">
-                <a id="navlink" href="background.html">My<br>Background</a>
+                <a id="navlink" href="#anchor-background">My<br>Background</a>
             </div>
             <div class="col-md-2 float-end">
-                <a id="navlink" href="contact.html">Links<br>& Contact</a>
+                <a id="navlink" href="#anchor-contact">Links<br>& Contact</a>
             </div>            
         </div>
     </div>
@@ -43,8 +43,9 @@
                <!-- PF pic -->
             </div>
             <div class="col-md-6 introtext">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid obcaecati dolores vel quas libero tenetur nulla laudantium fugiat dolor? Iure voluptates inventore commodi, hic asperiores molestias est optio recusandae beatae.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias dicta odit optio reprehenderit modi officia possimus omnis. Error voluptas veniam vitae modi tempora, et natus non, reprehenderit accusantium dicta dolorem.</p>
+                <p>Enthusiastic new developer eager to contribute to team success through hard work, attention to detail and excellent organizational skills. Good understanding of Object Oriented Programming, Backend & Frontend. Motivated to learn, grow and excel in the IT world.</p>
+                <p>I am detail-oriented and meticulous when managing competing priorities within tight deadlines. I work best in roles where utilizing a logical approach allows me to make a positive impact while using creative problem-solving to resolve issues and achieve goals.</p>
+                <p>My academic strengths have greatly contributed to the development of my organization and interpersonal skills. I bring clear and effective communication to build professional connections with co-workers, management and customers. I would welcome the opportunity to further discuss the details of my experience and attributes which I believe will be an asset to your team. </p>
 
             </div>
     </div>
@@ -52,15 +53,76 @@
     <div class="container Iam">
         <div class="row">
             <div class="col-md-12 dynamic">
-                <p>I am <span class="typed-text"></span></p>
+                <h2>I am <span
+                    class="txt-rotate"
+                    data-period="2000"
+                    data-rotate='[ "eager to learn.", "curious.", "motivated.", "resilient.", "fun!" ]'></span></h2>
         </div>
     </div>
+<br><br><br>
 
+<h1 id="anchor-hobbies"> My Hobbies</h1>
+<br><br><br>
+<div class="slider" id="main-slider"><!-- outermost container element -->
+	<div class="slider-wrapper"><!-- innermost wrapper element -->
+		<img src="assets/images/hobby1.jpg" alt="Camping" class="slide" /><!-- slides -->
+		<img src="assets/images/hobby22.jpg" alt="Cooking" class="slide" />
+		<img src="assets/images/hobby2-2.jpg" alt="Baking" class="slide" />
+        <img src="assets/images/hobby3.jpg" alt="Crafting" class="slide" />
+	</div>
+</div>
+<p class="hobby-text">I'm an adventurous person and I enjoy camping. I feel it's an excellent way to travel and to benefit from all the places we visit have to offer us and to meet the locals. 
+I also enjoy cooking and baking. I love to try new recipes and to experiment with different ingredients. Being able to make almost anything from scratch is something I'm really proud of. 
+Crafting fuels my creativity. Or my creativity fuels my crafting? Both. I love seeing things appear in my hand, may it be after a peaceful uneventful routine, or some swearing with trials & errors.</p>
+<br><br><br>
+<h1 id="anchor-background">My Background</h1>
+<br><br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <p> I got my diploma in collision repair in another life, then pursued some random jobs, looking for my calling. I thought I found it when I became a chef in 2014, but let's just say I'd rather keep cooking as a hobby.</p>
+            <p> In 2019 I started working towards getting my GED, because why not? I was in no rush since I had no idea what to do next. My etsy shop was succesful enough for me to earn a living.</p>
+            <p> Then in early 2022, I made my debut as a self-taught programmer and I loved it. So much I enrolled in an AEC in Web & database Programming. I felt like I finally belonged.</p>
+        </div>
+        <div class="col-md-6">
+            <img src="assets/images/background1.jpg" alt="background" class="background">
+        </div>
+    </div>
+</div>
+<br><br><br>
+<h1 id="anchor-contact">Links & Contact</h1>
+<br><br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-3">
+            <a href="http://www.linkedin.com/in/roxanne-proulx" target="_blank"><img src="assets/images/linkedin.png" alt="linkedin" class="social"></a>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-3">
+            <a href="http://www.github.com/roxayp" target="_blank"><img src="assets/images/github.png" alt="github" class="social"></a>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+<br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 contactemail">
+            <h5><a class="mail" href="mailto:roxanne.proulx87@gmail.com">Feel free to contact me via Email</a></h5>
+
+        </div>
+        <div class="col-md-3"></div>
+    </div> 
+    <br><br><br>       
 </body>
 <footer>
     <div class="container footer">
         <div class="row">
             <div class="col-md-12">
+                <br><br><br>
+                <h4>.2023. Roxanne Proulx</h4>
                 <!-- footer -->
             </div>
         </div>
