--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container toprow">
         <div class="row navbar">
             <div class="col-md-2">
-                <img src="assets/images/logo.png" alt="logo" class="logo">
+                <img src="assets/images/logo1.png" alt="logo" class="logo">
             </div>
             <div class="col-md-2">
                 <!-- leave empty -->
